JAVA ESTAVA COM ERRO. CORRIGIDO.

--- a/src/main/webapp/resources/uplon/assets/css/style.css
+++ b/src/main/webapp/resources/uplon/assets/css/style.css
@@ -429,23 +429,23 @@ File: Menu
 }
 
 #topnav .navigation-menu > li > a:hover i {
-  color: #129bb4;
+  color: #051048;
 }
 
 #topnav .navigation-menu > li > a:focus {
-  color: #129bb4;
+  color: #051048;
 }
 
 #topnav .navigation-menu > li > a:focus i {
-  color: #129bb4;
+  color: #051048;
 }
 
 #topnav .navigation-menu > li > a:active {
-  color: #129bb4;
+  color: #051048;
 }
 
 #topnav .navigation-menu > li > a:active i {
-  color: #129bb4;
+  color: #051048;
 }
 
 #topnav .navigation-menu > li > a i {
